landing page, nav, image and footer update, partially responsive

--- a/src/navigation/footer.css
+++ b/src/navigation/footer.css
@@ -1,4 +1,4 @@
-
+/* 
 
 footer {
     width: 100%;
@@ -15,4 +15,4 @@ footer {
     max-width: 80%;
     display: flex;
     justify-content: center; 
-}
+} */
