--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -1,15 +1,125 @@
 
-section {
-    width: 100%;
-    /* background-color:#FF7E6E; */
+.landing-container{
     display: flex;
-    justify-content: center;
+    /* centers the contents */
+    margin: auto;
+    /* tells the landing-container to take up 80% the width available */
+    max-width: 60%;
+    padding-top: 8rem; 
+}
+
+.col{
+    /* evenly spaces each column to take up 80% the width of it's available space */
+    width: 80%;
 }
 
 
-img {
-    width: 40%;
-    mix-blend-mode: luminosity 	;
-    display: none;
+.col img{
+    /* The below scales the image */
+    max-width: 100%;
+    height: auto;
+    /* cropping image */
+    /* clip-path: inset(0% 21% 0% 21%); */
+}
+
+.col-image{
+    filter: drop-shadow(-20px 30px 20px rgb(130, 130, 130));
+    position:relative;
+    display: flex;
+    justify-content: flex-end;
+    /* Align start stops the image from stretching once the height of the container has been subceeded*/
+    align-self: start; 
+}
+
+
+.col-text{
+    /* position:relative; */
+    padding-right: 100px;
+}
+
+.opening-rectangle{
+    height: 2rem;
+    width: 10rem;
+    background-color: black;
+}
+
+.col h1{
+    font-family: 'inter';
+    font-size: 7em;
+    font-weight: 800;
+    padding: 2rem 0 2rem 0;
+}
+
+.col h1 span{
+    color: rgba(102, 83, 255);
+}
+
+.col h4{
+    font-family: 'IBM Plex Mono', monospace;
+    padding: 2rem 0 2rem 0;
+    font-size: 3rem;
+    font-weight: 100;
+    color: #525252;
+
+}
+
+.col h4 span{
+    color: rgba(102, 83, 255);
+}
+
+.col p{
+    font-family: 'IBM Plex Mono', monospace;
+    padding: 2rem 0 2rem 0;
+    font-size: 2rem;
+    font-weight: 800;
+    color: #525252;
+}
+
+.col p span{
+    color: rgba(102, 83, 255);
+}
+
+.closing-rectangle-two{
+    position: absolute;
+    z-index: 1;
+    height: 4rem;
+    width: 200%;
+    right: 10rem;
+    bottom: 10rem;
+    background-color: black;
+}
+
+@media (max-width: 1950px) {
+
+    .col h1{
+        font-size: 6em;
+        padding: 1rem 0 1rem 0;
+    }
+    
+    .col h4{
+        padding: 1rem 0 1rem 0;
+        font-size: 2.2rem;
+    }
+    
+    .col p{
+        padding: 1rem 0 1rem 0;
+        font-size: 2rem;
+    }
+    
+}
+
+@media (max-width: 1566px) {
+    
+    .closing-rectangle-two{
+        display: none;
+    }
+
+}
+
+@media (max-width: 1340px) {
+    
+    .col h1{
+        font-size: 5rem;
+    }
 
 }
