--- a/src/navigation/navigation.css
+++ b/src/navigation/navigation.css
@@ -37,4 +37,14 @@ nav .nav-container ul li{
     margin: 0;
     font-size: 1.3rem;
     font-weight: light;
+
+}
+
+a:visited{
+    color: black;
+    text-decoration:none;
+}
+a:any-link{
+    color: black;
+    text-decoration:none;
 }
