--- a/src/pages/landing/landing.css
+++ b/src/pages/landing/landing.css
@@ -14,13 +14,18 @@
 }
 
 
-.col img{
+.col .portrait-img{
     /* The below scales the image */
     max-width: 100%;
     height: auto;
     /* cropping image */
     /* clip-path: inset(0% 21% 0% 21%); */
 }
+
+.square-image{
+    display: none;
+}
+
 
 .col-image{
     filter: drop-shadow(-20px 30px 20px rgb(130, 130, 130));
@@ -111,7 +116,8 @@
 @media (max-width: 1566px) {
     
     .closing-rectangle-two{
-        display: none;
+        /* display: none; */
+        width: 100%;
     }
 
 }
@@ -121,5 +127,55 @@
     .col h1{
         font-size: 5rem;
     }
+
+}
+
+@media (max-width: 1173px) {
+    .landing-container{
+        flex-direction: column;
+    }
+
+
+    .closing-rectangle-two{
+        /* display: none; */
+        margin: 1rem 0 1rem 0;
+        float: none;
+        position: static;
+        width: 100%;
+        height: 2rem;
+        
+    }
+
+    .col{
+        width: 100%;
+    }
+
+    .col-image{
+        filter:none;
+        display:inline-block;
+  
+    }
+
+    .col .portrait-img{
+        display: none;
+        
+    }
+
+    .square-image{
+
+        display: block;
+        width: 100%;
+        height: auto;
+        margin: 5rem 0 5rem 0;
+    }
+
+
+
+
+    
+  
+
+
+    
 
 }
