--- a/src/navigation/navigation.css
+++ b/src/navigation/navigation.css
@@ -48,3 +48,163 @@ a:any-link{
     color: black;
     text-decoration:none;
 }
+
+.responsive-menu-container{
+    display: none;
+}
+
+/* Burger Menu Styling */
+
+/* Position and sizing of burger button */
+
+  
+  /* Color/shape of burger icon bars */
+  .bm-burger-bars {
+    background: #373a47;
+  }
+  
+  /* Color/shape of burger icon bars on hover*/
+  .bm-burger-bars-hover {
+    background: rgba(102, 83, 255);
+  }
+  
+  /* Position and sizing of clickable cross button */
+  .bm-cross-button {
+    height: 24px;
+    width: 24px;
+  }
+  
+  /* Color/shape of close button cross */
+  .bm-cross {
+    background: #bdc3c7;
+  }
+  
+  /*
+  Sidebar wrapper styles
+  Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+  */
+  .bm-menu-wrap {
+    position: fixed;
+    height: 50%;
+  }
+  
+  /* General sidebar styles */
+  .bm-menu {
+    display: flex;
+    background: #f5f5f5;
+    padding: 2.5em 1.5em 0;
+    font-size: 1.15em;
+    z-index: 1000;
+
+    /* Hide scrollbar for IE, Edge add Firefox */
+    /* Code Grep Answer */
+    -ms-overflow-style: none;
+    scrollbar-width: none; /* Firefox */
+
+    
+
+
+  }
+  
+
+  /* Morph shape necessary with bubble or elastic */
+  .bm-morph-shape {
+    fill: #373a47;
+  }
+  
+  /* Wrapper for item list */
+  .bm-item-list {
+    color: #b8b7ad;
+    padding: 0.8em;
+    
+  }
+  
+  /* Individual item */
+  .bm-item {
+    display: inline-block;
+    padding-left: 0;
+
+  }
+
+  .bm-item > a > li {
+    
+    font-size: 2rem;
+    font-weight: 800;
+    padding-bottom: 2rem;
+    list-style: none;
+    color: black;
+    
+  }
+
+  .bm-item > a > li:hover {
+
+
+    color: rgba(102, 83, 255);
+  }
+  
+
+
+  /* Styling of overlay */
+  .bm-overlay {
+    background: rgba(0, 0, 0, 0.3);
+  }
+
+
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+/* Code Grep Answer */
+.bm-menu::-webkit-scrollbar {
+    display: none;
+}
+  
+
+
+
+
+  /* Media Queries */
+
+@media (max-width: 860px) {
+
+    .nav-container{
+        display: block;
+    }
+
+    .hide-desktop-links > a:any-link{
+        display: none;
+        
+    }
+
+
+  .responsive-menu-container{
+    display: block;
+    position: fixed;
+    top: 0;
+    left: 0;
+
+  }
+
+  .bm-burger-button {
+    position: fixed;
+    width: 36px;
+    height: 30px;
+    right: 4rem;
+    top: 1rem;
+
+  }
+
+  /* Quick Fix */
+
+
+a:any-link {
+    
+
+    width: 25px;
+}
+
+  /* .hide-desktop-links{
+    display: none;
+  } */
+
+
+
+}
