--- a/src/navigation/navigation.css
+++ b/src/navigation/navigation.css
@@ -17,10 +17,14 @@ nav {
 }
 
 nav h1 {
-    font-size: 2.5rem;
-    font-weight: 800;
-    padding: 0;
-    margin: 0;
+
+  font-size: 2.5rem;
+  font-weight: 800;
+  padding: 0;
+  margin: 0;
+  position: fixed;
+  z-index: 1;
+
 }
 
 nav .nav-container ul{
@@ -28,6 +32,12 @@ nav .nav-container ul{
     margin: 0;
     display: flex;
     list-style: none;
+
+
+    /* Fix the list items to the top of page */
+    position: fixed;
+    z-index: 2;
+    right: 6%;
 }
 
 nav .nav-container ul li{
