--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,30 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width:100%; 
+  height:100%; 
+  margin:0; 
+  padding:0; 
+
 }
+
+body {overflow-x: hidden;}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html { width:100%; height:100%; margin:0px; padding:0; }
+
+
+*{
+  box-sizing: border-box;
+  margin: 0;
+}
+section,footer{
+  overflow: hidden;
+  white-space: wrap;
+  word-break: break-word;
 }
