--- a/src/navigation/navigation.css
+++ b/src/navigation/navigation.css
@@ -46,7 +46,7 @@ nav .nav-container ul li{
     padding-left: 2rem;
     margin: 0;
     font-size: 1.3rem;
-    font-weight: light;
+    font-weight: 800;
 
 }
 
@@ -201,13 +201,13 @@ a:any-link{
   }
 
   /* Quick Fix */
-
-
-a:any-link {
+  .bm-item-list > a:any-link {
     
 
     width: 25px;
 }
+
+
 
   /* .hide-desktop-links{
     display: none;
