--- a/src/pages/banners/banner.css
+++ b/src/pages/banners/banner.css
@@ -57,7 +57,30 @@
 
 .introduction-container p{
 
+    font-family: 'IBM Plex Mono', monospace;
     font-size: 2.5rem;
     color: #000000;
 
 }
+
+
+.social-container{
+    display: flex;
+    justify-content: space-between;
+
+
+
+
+}
+
+
+.social-container > a:hover{
+color: rgb(111, 111, 111);
+color: rgba(102, 83, 255, 0.7);
+    
+
+
+
+}
+
+
