Responsive Updates to Banner Text and Image Thumbnail links

--- a/src/pages/banners/banner.css
+++ b/src/pages/banners/banner.css
@@ -84,3 +84,14 @@ color: rgba(102, 83, 255, 0.7);
 }
 
 
+
+@media (max-width: 565px){
+
+    .introduction-container h1{
+        font-size: 3rem;
+    }
+
+    .introduction-container p {
+        font-size: 1.5rem;
+    }
+}
