--- a/src/navigation/navigation.css
+++ b/src/navigation/navigation.css
@@ -7,6 +7,8 @@ nav {
     width: 100%;
     /* background-color: rgb(23, 23, 23); */
     color:rgb(1, 4, 37);
+
+    z-index: 10;
 }
 
 .nav-container{
@@ -61,6 +63,7 @@ a:any-link{
 
 .responsive-menu-container{
     display: none;
+    z-index: inherit;
 }
 
 /* Burger Menu Styling */
